# ai_fundamentals_fp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ai_final_project.md
docs/superpowers/plans/: 2026-05-21-ml-streamlit-app.md
src/: app.py  model.py
tests/: conftest.py  test_app.py  test_model.py  test_smoke.py
