[project]
name = "ai-f-fp"
version = "0.1.0"
description = "Linear regression model + Streamlit web app (course final project)"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "streamlit",
    "scikit-learn",
    "numpy",
    "pandas",
    "matplotlib",
]

[dependency-groups]
test = [
    "pytest",
]
linter = [
    "ruff",
]

[tool.uv]
default-groups = ["test", "linter"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
